--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/Server.js",
   "scripts": {
-    "dev": "nodemon  src/Server.js"
+    "dev": "nodemon  src/Server.js",
+    "start": "node  src/Server.js"
   },
   "keywords": [],
   "author": "",
